--- a/modulo3/fundo006.html
+++ b/modulo3/fundo006.html
@@ -10,7 +10,7 @@
             height: 97vh;
             background-color: black;
             background-image: url(ex022/imagens/wallpaper002.jpg);
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-position: center center;
             background-size: cover;
         }
@@ -19,16 +19,36 @@
             background-color: white;
             width: 400px;
             padding: 10px;
-            border-radius: 15px;
+            border-radius: 0px 0px 15px 15px;
             border: 1px solid darkblue;
             margin: auto;
+            text-align: justify;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 1em;
         }
     </style>
 </head>
 <body>
     <main>
         <h1>Testando a posicionamento das imagens</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa eaque numquam ratione ducimus quaerat, culpa cupiditate totam dignissimos commodi fugit distinctio voluptatem! Ipsam voluptatum accusantium quaerat doloribus? Quo, earum ex?
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit perspiciatis illum voluptate reprehenderit dignissimos aspernatur molestias velit ratione a facere, consectetur corporis vitae ad asperiores deserunt laudantium provident saepe id.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi iusto aliquam provident blanditiis id iste labore hic harum molestias facere, deserunt, vitae magni dolorum illo, quia perspiciatis voluptate officiis dolorem.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa eaque numquam ratione ducimus quaerat, culpa cupiditate totam dignissimos commodi fugit distinctio voluptatem! Ipsam voluptatum accusantium quaerat doloribus? Quo, earum ex?
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit perspiciatis illum voluptate reprehenderit dignissimos aspernatur molestias velit ratione a facere, consectetur corporis vitae ad asperiores deserunt laudantium provident saepe id.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi iusto aliquam provident blanditiis id iste labore hic harum molestias facere, deserunt, vitae magni dolorum illo, quia perspiciatis voluptate officiis dolorem.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa eaque numquam ratione ducimus quaerat, culpa cupiditate totam dignissimos commodi fugit distinctio voluptatem! Ipsam voluptatum accusantium quaerat doloribus? Quo, earum ex?
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit perspiciatis illum voluptate reprehenderit dignissimos aspernatur molestias velit ratione a facere, consectetur corporis vitae ad asperiores deserunt laudantium provident saepe id.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi iusto aliquam provident blanditiis id iste labore hic harum molestias facere, deserunt, vitae magni dolorum illo, quia perspiciatis voluptate officiis dolorem.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa eaque numquam ratione ducimus quaerat, culpa cupiditate totam dignissimos commodi fugit distinctio voluptatem! Ipsam voluptatum accusantium quaerat doloribus? Quo, earum ex?
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit perspiciatis illum voluptate reprehenderit dignissimos aspernatur molestias velit ratione a facere, consectetur corporis vitae ad asperiores deserunt laudantium provident saepe id.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi iusto aliquam provident blanditiis id iste labore hic harum molestias facere, deserunt, vitae magni dolorum illo, quia perspiciatis voluptate officiis dolorem.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa eaque numquam ratione ducimus quaerat, culpa cupiditate totam dignissimos commodi fugit distinctio voluptatem! Ipsam voluptatum accusantium quaerat doloribus? Quo, earum ex?
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit perspiciatis illum voluptate reprehenderit dignissimos aspernatur molestias velit ratione a facere, consectetur corporis vitae ad asperiores deserunt laudantium provident saepe id.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi iusto aliquam provident blanditiis id iste labore hic harum molestias facere, deserunt, vitae magni dolorum illo, quia perspiciatis voluptate officiis dolorem.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa eaque numquam ratione ducimus quaerat, culpa cupiditate totam dignissimos commodi fugit distinctio voluptatem! Ipsam voluptatum accusantium quaerat doloribus? Quo, earum ex?
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit perspiciatis illum voluptate reprehenderit dignissimos aspernatur molestias velit ratione a facere, consectetur corporis vitae ad asperiores deserunt laudantium provident saepe id.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi iusto aliquam provident blanditiis id iste labore hic harum molestias facere, deserunt, vitae magni dolorum illo, quia perspiciatis voluptate officiis dolorem.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa eaque numquam ratione ducimus quaerat, culpa cupiditate totam dignissimos commodi fugit distinctio voluptatem! Ipsam voluptatum accusantium quaerat doloribus? Quo, earum ex?
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit perspiciatis illum voluptate reprehenderit dignissimos aspernatur molestias velit ratione a facere, consectetur corporis vitae ad asperiores deserunt laudantium provident saepe id.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi iusto aliquam provident blanditiis id iste labore hic harum molestias facere, deserunt, vitae magni dolorum illo, quia perspiciatis voluptate officiis dolorem.
         </p>
