--- a/modulo3/fundo006.html
+++ b/modulo3/fundo006.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>posicionamento</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body {
-            height: 97vh;
+            /*height: 97vh;
             background-color: black;
             background-image: url(ex022/imagens/wallpaper002.jpg);
-            background-repeat: repeat-y;
+            background-repeat: no-repeat;
             background-position: center center;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            background: black url(ex022/imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             border-radius: 0px 0px 15px 15px;
             border: 1px solid darkblue;
@@ -26,11 +30,16 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size: 1em;
         }
+        main h1{
+            text-align: center;
+            padding: 10px;
+            
+        }
     </style>
 </head>
 <body>
     <main>
-        <h1>Testando a posicionamento das imagens</h1>
+        <h1>Testando o posicionamento das imagens</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit perspiciatis illum voluptate reprehenderit dignissimos aspernatur molestias velit ratione a facere, consectetur corporis vitae ad asperiores deserunt laudantium provident saepe id.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi iusto aliquam provident blanditiis id iste labore hic harum molestias facere, deserunt, vitae magni dolorum illo, quia perspiciatis voluptate officiis dolorem.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa eaque numquam ratione ducimus quaerat, culpa cupiditate totam dignissimos commodi fugit distinctio voluptatem! Ipsam voluptatum accusantium quaerat doloribus? Quo, earum ex?
