--- a/modulo3/funfo004.html
+++ b/modulo3/funfo004.html
@@ -12,7 +12,7 @@
             background-image: url("https://gustavoguanabara.github.io/html-css/imagens/mascote.png");
             background-repeat: no-repeat;
             background-size: 100px;
-            background-position: center center;
+            background-position: center top;
 
         }
     </style>
