--- a/modulo3/ex023/tabela001.html
+++ b/modulo3/ex023/tabela001.html
@@ -5,8 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        table {
+            width: 400px;
+            border-collapse: collapse;
+            border :5px solid red;
+        }
+        td {
+            border: 1px solid black;
+            padding: 8px;
+        }
+
+        tr.linha {
+            background-color: darkgray;
+        }
+
+        td.dado {
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
     <h1>Minha primeira Tabela</h1>
+    <!--
+        Hierarquia de tabelas Simples
+        table = tabela
+            table row = linha de tabela (tr)
+                table header = cabeçalho de tabela
+                table data = dado de tabela
+    -->
+
+    <table>
+        <tr> <!--Primeira linha-->
+            <td>A1</td>
+            <td>B1</td>
+            <td>C1</td>
+        </tr>
+        <tr class="linha"> <!--segunda linha-->
+            <td>A2</td>
+            <td>B2</td>
+            <td>C3</td>
+        </tr>
+        <tr> <!--terceira linha-->
+            <td>A3</td>
+            <td>B3</td>
+            <td>C3</td>
+        </tr>
+        <tr> <!--Quarta linha-->
+            <td>A4</td> 
+            <td class="dado">B4</td>
+            <td>C4</td>
+        </tr>
+    </table>
+
 </body>
 </html>
