--- a/modulo3/ex023/tabela003.html
+++ b/modulo3/ex023/tabela003.html
@@ -30,6 +30,10 @@
         background-color: darkgray;
         color: white;
     }
+
+    td.num {
+        text-align: right;
+    }
 </style>
 
 
@@ -186,7 +190,7 @@
     <tfoot>
         <th>Total de Habitantes</th>
         <th></th>
-        <td>0000</td>
+        <td class="num">210.147.125</td>
 
     </tfoot>
 
