--- a/modulo3/desafio13/desafio013.4.html
+++ b/modulo3/desafio13/desafio013.4.html
@@ -42,12 +42,13 @@
 </head>
 <body>
     <table>
+        <caption>Matéria da Escola!</caption>
         <thead>
             <tr>
-                <th rowspan="2">Área</th>
-                <th rowspan="2">Disciplinas</th>
-                <th colspan="2">Notas</th>
-                <th rowspan="2">Média</th>
+                <th rowspan="2" scope="rowgroup">Área</th>
+                <th rowspan="2" scope="rowgroup">Disciplinas</th>
+                <th colspan="2" scope="rowgroup">Notas</th>
+                <th rowspan="2" scope="rowgroup">Média</th>
                 <tr>
                     <td>Nota 1</td>
                     <td>Nota 2</td>
@@ -57,7 +58,7 @@
         </thead>
         <tbody>
            <tr>
-            <th rowspan="4">Exatas</th>
+            <th rowspan="4" scope="colgroup">Exatas</th>
             <td>Matemática</td>
             <td>0.0</td>
             <td>0.0</td>
@@ -82,11 +83,11 @@
             <td>0.0</td>
            </tr>
            <tr class="cabeca1">
-            <th colspan="4" class="cabeca">Média de Exatas</th>
+            <th colspan="4" class="cabeca" scope="col">Média de Exatas</th>
             <td>0.0</td>
            </tr>
            <tr>
-            <th rowspan="2">Humanas</th>
+            <th rowspan="2" scope="rol">Humanas</th>
             <td>História</td>
             <td>0.0</td>
             <td>0.0</td>
@@ -99,7 +100,7 @@
                 <td>0.0</td>
            </tr>
            <tr class="cabeca1">
-            <th colspan="4" class="cabeca">Média de Humanas</th>
+            <th colspan="4" class="cabeca" scope="col">Média de Humanas</th>
             <td>0.0</td>
            </tr>
 
